Modify markup semantics for accessibility issues

--- a/public/index.html
+++ b/public/index.html
@@ -20,19 +20,19 @@
   </head>
 
   <body class="bg-primary">
-    <article class="card | bg-secondary">
-      <div class="card-content | flow">
-        <img src="images/image-qr-code.png" alt="QR Code" />
-        <div>
-          <h3 id="card-title" class="txt-primary">
+    <main role="main" class="card | bg-secondary">
+      <section class="card-content | flow">
+        <img role="img" src="images/image-qr-code.png" alt="QR Code" />
+        <section role="document">
+          <h1 id="card-title" class="txt-primary">
             Improve your front-end skills by building projects
-          </h3>
+          </h1>
           <p id="card-text" class="txt-secondary">
             Scan the QR code to visit Frontend Mentor and take your coding
             skills to the next level
           </p>
-        </div>
-      </div>
-    </article>
+        </section>
+      </section>
+    </main>
   </body>
 </html>
