Address HTML issues

--- a/public/index.html
+++ b/public/index.html
@@ -20,10 +20,10 @@
   </head>
 
   <body class="bg-primary">
-    <main role="main" class="card | bg-secondary">
+    <main class="card | bg-secondary">
       <section class="card-content | flow">
-        <img role="img" src="images/image-qr-code.png" alt="QR Code" />
-        <section role="document">
+        <img src="images/image-qr-code.png" alt="QR Code" />
+        <article role="document">
           <h1 id="card-title" class="txt-primary">
             Improve your front-end skills by building projects
           </h1>
@@ -31,7 +31,7 @@
             Scan the QR code to visit Frontend Mentor and take your coding
             skills to the next level
           </p>
-        </section>
+        </article>
       </section>
     </main>
   </body>
