Address HTML issues

--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,9 @@
 
   <body class="bg-primary">
     <main class="card | bg-secondary">
-      <section class="card-content | flow">
+      <div class="card-content | flow">
         <img src="images/image-qr-code.png" alt="QR Code" />
-        <article role="document">
+        <article>
           <h1 id="card-title" class="txt-primary">
             Improve your front-end skills by building projects
           </h1>
@@ -32,7 +32,7 @@
             skills to the next level
           </p>
         </article>
-      </section>
+      </div>
     </main>
   </body>
 </html>
